# evops-backend

./: .dockerignore  .env.example  .gitmodules  Cargo.toml  README.md  bacon.toml  dev.Dockerfile  hmr.Dockerfile  prod.Dockerfile
crates/evops/: Cargo.toml  README.md
crates/evops-core/: Cargo.toml  README.md
crates/evops-core/src/: errors.rs  lib.rs  services.rs  types.rs
crates/evops-core/src/services/: auth.rs  event.rs  language.rs  tag.rs  user.rs
crates/evops-db/: Cargo.toml
crates/evops-db/migrations/2025-05-22-213806_setup/: down.sql  up.sql
crates/evops-db/src/: errors.rs  lib.rs  models.rs  schema.rs  services.rs
crates/evops-db/src/models/: event.rs  location.rs  tag.rs  user.rs
crates/evops-db/src/services/: event.rs  tag.rs  user.rs
crates/evops-grpc/: Cargo.toml  README.md  build.rs
crates/evops-grpc/src/: headers.rs  lib.rs  pb.rs
crates/evops-grpc/src/pb/: conversions.rs  impls.rs
crates/evops-grpc/src/services/: auth.rs  event.rs  language.rs  tag.rs  user.rs
crates/evops-ml-client/: Cargo.toml  README.md  build.rs
crates/evops-ml-client/src/: lib.rs  logic.rs  pb.rs
crates/evops-models/: Cargo.toml
crates/evops-models/src/: lib.rs
crates/evops-models/src/services/: event.rs  tag.rs  user.rs
crates/evops-pb/: Cargo.toml  build.rs
crates/evops-pb/src/: api.rs  conversions.rs  lib.rs
crates/evops-rest/: Cargo.toml  README.md
crates/evops-rest/src/: docs.rs  error.rs  lib.rs  routes.rs  types.rs
crates/evops-rest/src/docs/: routes.rs
crates/evops-rest/src/error/: bad_request.rs  conflict.rs  conversions.rs  internal_server_error.rs  not_found.rs  unprocessable_entity.rs
crates/evops-rest/src/routes/: v1.rs
crates/evops-rest/src/routes/v1/: auth.rs  event.rs  events.rs  languages.rs  tags.rs  users.rs
crates/evops-rest/src/routes/v1/auth/: login.rs  me.rs  refresh.rs  signup.rs
crates/evops-rest/src/routes/v1/event/: create.rs
crates/evops-rest/src/routes/v1/events/: _event_id.rs  _id.rs  create.rs  images.rs
crates/evops-rest/src/routes/v1/events/_event_id/: images.rs
crates/evops-rest/src/routes/v1/events/_id/: images.rs
crates/evops-rest/src/routes/v1/events/images/: _id.rs  _image_id.rs
crates/evops-rest/src/routes/v1/tag/: create.rs
crates/evops-rest/src/routes/v1/tags/: _id.rs  _tag_id.rs  by_description.rs  suggestions.rs
crates/evops-rest/src/routes/v1/user/: create.rs
crates/evops-rest/src/routes/v1/users/: _id.rs  _user_id.rs  auth.rs  create.rs  login.rs  refresh.rs  signup.rs
crates/evops-rest/src/types/: conversions.rs  impls.rs
crates/evops-storage/: Cargo.toml  README.md
crates/evops-storage/src/: lib.rs  logic.rs
crates/evops-types/: Cargo.toml
crates/evops-types/src/: lib.rs
crates/evops-types/src/services/: event.rs  tag.rs  user.rs
crates/evops/src/: config.rs  main.rs
scripts/dummy-data/: Cargo.toml
scripts/dummy-data/src/: api.rs  main.rs
