[workspace]
resolver = "3"
members = ["crates/*/"]
exclude = ["server-ext/"]
default-members = ["crates/evops/"]

[workspace.dependencies]
# Local
evops-core = { path = "crates/evops-core/" }
evops-grpc = { path = "crates/evops-grpc/" }
evops-ml-client = { path = "crates/evops-ml-client/" }
evops-rest = { path = "crates/evops-rest/" }
evops-storage = { path = "crates/evops-storage/" }

# Client/Server Extensions
evops-db = { path = "server-ext/crates/evops-db/" }
evops-models = { path = "server-ext/client-ext/crates/evops-models/" }

# External
aide = "0.15.0"
aide-axum-typed-multipart = { version = "0.16.0", package = "aide-axum-typed-multipart-2" }
axum = "0.8.4"
axum-extra = "0.10.1"
axum_tonic = "0.4.1"
axum_typed_multipart = "0.16.3"
bon = "3.6.4"
bytes = "1.10.1"
bytesize = "2.0.1"
chrono = "0.4.41"
color-eyre = "0.6.5"
const_format = "0.2.34"
dotenvy = "0.15.7"
eyre = "0.6.12"
futures = "0.3.31"
http = "1.3.1"
image = "0.25.6"
itertools = "0.14.0"
minio = "0.3.0"
prost = "0.13.5"                                                                            # 0.14.1
prost-types = "0.13.5"                                                                      # 0.14.1
schemars = { version = "0.9.0", features = ["preserve_order"] }                             # 1.0.3
serde = "1.0.219"
strum = "0.27.1"
tap = "1.0.1"
tokio = "1.46.1"
tokio-stream = "0.1.17"
tonic = "0.13.1"
tonic-build = "0.13.1"
tonic-reflection = "0.13.1"
tonic-web = "0.13.1"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["fast-rng"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
missing-errors-doc = { level = "allow", priority = 1 }
