[package]
name = "evops-core"
edition = "2024"

[dependencies]
bon = { workspace = true }
bytes = { workspace = true }
evops-db = { workspace = true }
evops-ml-client = { workspace = true }
evops-models = { workspace = true }
evops-storage = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
url = { workspace = true }

[lints]
workspace = true
