[package]
name = "evops-db"
edition = "2024"

[dependencies]
diesel = { workspace = true, features = ["chrono"] }
diesel-async = { workspace = true, features = ["postgres"] }
diesel-derive-newtype = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
