[package]
name = "evops-db"
edition = "2024"

[dependencies]
evops-types = { workspace = true }

diesel = { workspace = true, features = ["chrono", "uuid"] }
diesel-async = { workspace = true, features = ["postgres"] }
chrono = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
