[package]
name = "evops-db"
edition = "2024"

[dependencies]
evops-models = { workspace = true }

chrono = { workspace = true }
diesel = { workspace = true, features = ["chrono", "uuid"] }
diesel-async = { workspace = true, features = ["postgres"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

[lints]
workspace = true
