[package]
name = "evops-grpc"
edition = "2024"

[dependencies]
evops-core = { workspace = true }
evops-models = { workspace = true, features = ["tonic"] }

axum = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
http = { workspace = true }
# Needed by build.rs for the `crate::pb` module.
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tonic-web = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
uuid = { workspace = true }

[build-dependencies]
eyre = { workspace = true }
tonic-build = { workspace = true }

[lints]
workspace = true
