[package]
name = "evops-ml-client"
edition = "2024"

[dependencies]
evops-models = { workspace = true }
eyre = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
eyre = { workspace = true }
tonic-build = { workspace = true }

[lints]
workspace = true
