[package]
name = "evops-rest"
edition = "2024"

[dependencies]
evops-core = { workspace = true }
evops-models = { workspace = true, features = ["aide"] }

aide = { workspace = true, features = [
  "axum-json",
  "axum-query",
  "scalar",
  "swagger",
] }
aide-axum-typed-multipart = { workspace = true }
axum = { workspace = true }
axum_typed_multipart = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
schemars = { workspace = true, features = ["chrono04", "url2", "uuid1"] }
serde = { workspace = true, features = ["rc"] }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde"] }

[lints]
workspace = true
