[package]
name = "evops-rest"
edition = "2024"

[dependencies]
aide = { workspace = true, features = ["axum-json", "axum-query", "swagger"] }
aide-axum-typed-multipart = { workspace = true }
axum = { workspace = true }
axum_typed_multipart = { workspace = true }
axum-extra = { workspace = true, features = ["file-stream"] }
chrono = { workspace = true, features = ["serde"] }
evops-core = { workspace = true }
evops-models = { workspace = true, features = ["aide"] }
futures = { workspace = true }
schemars = { workspace = true, features = ["bytes1", "chrono04", "uuid1"] }
serde = { workspace = true, features = ["rc"] }
strum = { workspace = true, features = ["derive"] }
tap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

[lints]
workspace = true
