[package]
name = "evops-storage"
edition = "2024"

[dependencies]
bon = { workspace = true }
bytes = { workspace = true }
evops-models = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
minio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
