[package]
name = "evops-types"
edition = "2024"

[dependencies]
chrono = { workspace = true }
diesel = { workspace = true }
eyre = { workspace = true }
nutype = { workspace = true, features = ["new_unchecked", "regex"] }
regex = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
